# earnings-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json
backend/: pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/db/: database.py  models.py
backend/app/mcp_server/: server.py
backend/app/mcp_server/tools/: analyze.py  web_search.py
backend/app/routers/: analysis.py  calendar.py  chart.py  favorites.py  news.py
backend/app/services/: analysis.py  cache.py  earnings_calendar.py  market_cap.py
backend/tests/: conftest.py  test_analysis_router.py  test_analysis_service.py  test_cache_service.py  test_calendar_router.py  test_calendar_service.py  test_market_cap.py  test_mcp_tools.py  test_models.py
frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: AnalysisModal.svelte  DayColumn.svelte  EarningsCard.svelte  FavoriteButton.svelte  Homepage.svelte  LandingPage.svelte  Sparkline.svelte  StockDetail.svelte  StockSearch.svelte  Toast.svelte  WeekCalendar.svelte
frontend/src/lib/: api.js  clerk.js  utils.js
frontend/tests/: api.test.js  utils.test.js
